service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calcom
  namespace: calcom
  labels:
    app: calcom
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app: calcom
