ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    traefik.ingress.kubernetes.io/router.middlewares: radicale-radicale-middleware@kubernetescrd
  name: radicale
  namespace: radicale
spec:
  ingressClassName: traefik
  rules:
    - host: cal.ryzen.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - cal.ryzen.me
      secretName: radicale-tls
