ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radicale
  namespace: radicale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cal.ryzen.me`)
      kind: Rule
      middlewares:
        - name: radicale-oauth-middleware
      services:
        - name: radicale 
          port: 5232
  tls:
    secretName: radicale-tls
